fixed spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -198,7 +198,7 @@ label{
 
 .col-md-8{
   margin-bottom: 100px;
-  width: 70%;
+  width: 100%;
   display: inline-block;
 }
 .time{
